--- a/sandboxTemplates/viewSandbox.html
+++ b/sandboxTemplates/viewSandbox.html
@@ -18,6 +18,8 @@
       <select id="extensionViewSelector">
         <!-- view options -->
       </select>
+
+      <button onclick="window.open(document.getElementById('extensionViewIframe').src);">Open View in New Tab</button>
     </div>
 
     <iframe id="extensionViewIframe"></iframe>
