Files from include folder are take now from the split repositories.

--- a/sandboxTemplates/libSandbox.html
+++ b/sandboxTemplates/libSandbox.html
@@ -3,8 +3,8 @@
   <head lang="en">
     <meta charset="UTF-8">
     <title>Extension Library Sandbox</title>
-    <script src="includes/container.js"></script>
-    <script src="includes/engine.js"></script>
+    <script src="includes/js/container.js"></script>
+    <script src="includes/js/engine.js"></script>
   </head>
   <body>
     <h1>Extension Library Sandbox</h1>
