--- a/sandboxTemplates/viewSandbox.html
+++ b/sandboxTemplates/viewSandbox.html
@@ -3,10 +3,10 @@
   <head lang="en">
     <meta charset="UTF-8">
     <title>Extension View Sandbox</title>
-    <script src="includes/jschannel.js"></script>
-    <script src="includes/extensionBridge.js"></script>
-    <script src="includes/viewSandbox.js"></script>
-    <link href="includes/viewSandbox.css" rel="stylesheet" type="text/css">
+    <script src="includes/js/jschannel.js"></script>
+    <script src="includes/js/extensionBridge.js"></script>
+    <script src="includes/js/viewSandbox.js"></script>
+    <link href="includes/css/viewSandbox.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Extension View Sandbox</h1>
