Send schema during validation.

--- a/sandboxTemplates/viewSandbox.html
+++ b/sandboxTemplates/viewSandbox.html
@@ -15,10 +15,7 @@
 
     <div>
       Select View:
-      <select id="extensionViewSelector">
-        <!-- view options -->
-      </select>
-
+      <select id="extensionViewSelector"></select>
       <button onclick="window.open(document.getElementById('extensionViewIframe').src);">Open View in New Tab</button>
     </div>
 
