Use windgoogles for setting frameboyant and iframe resizer on the iframe view.

--- a/sandboxTemplates/viewSandbox.html
+++ b/sandboxTemplates/viewSandbox.html
@@ -17,7 +17,7 @@
       <button onclick="window.open(document.getElementById('extensionViewIframe').src);">Open View in New Tab</button>
     </div>
 
-    <iframe id="extensionViewIframe"></iframe>
+    <div id="iframeContainer"></div>
 
     <div>
       <div class="actionPanel">
