--- a/sandboxTemplates/viewSandbox.html
+++ b/sandboxTemplates/viewSandbox.html
@@ -13,6 +13,7 @@
 
     <div>
       Select View:
+      <select id="viewGroupSelector"></select>
       <select id="extensionViewSelector"></select>
       <button id="newTabButton">Open View in New Tab</button>
     </div>
