Use custom TypeKit build.

--- a/sandboxTemplates/viewSandbox.html
+++ b/sandboxTemplates/viewSandbox.html
@@ -5,6 +5,10 @@
     <title>Extension View Sandbox</title>
     <script src="includes/js/viewSandbox.js"></script>
     <link href="includes/css/viewSandbox.css" rel="stylesheet" type="text/css">
+    <script>
+      window.Coral = window.Coral || {};
+      Coral.options = { typeKitId: 'buj6cmr'};
+    </script>
   </head>
   <body>
     <h1>Extension View Sandbox</h1>
