--- a/sandboxTemplates/libSandbox.html
+++ b/sandboxTemplates/libSandbox.html
@@ -2,13 +2,21 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8">
-    <title>Extension Library Sandbox</title>
+    <title>Reactor Extension Library Sandbox</title>
+
+    <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/css/coral.css">
+    <script src="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/js/libs/jquery.js"></script>
+    <script src="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/js/coral.js"></script>
+
+    <link href="includes/css/sandbox.css" rel="stylesheet" type="text/css">
     <script src="includes/js/container.js"></script>
     <script src="includes/js/engine.js"></script>
   </head>
-  <body>
-    <h1>Extension Library Sandbox</h1>
+  <body class="coral--light">
+    <a class="nav" is="coral-anchorbutton" variant="quiet" href="viewSandbox.html">Go to view sandbox</a>
 
-    <p><a href="viewSandbox.html">Switch to Extension View Sandbox</a></p>
+    <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
+
+    Modify sandboxTemplate/container.js and sandboxTemplate/libSandbox.html then test the result here.
   </body>
 </html>
