Update lib sandbox view to use the right Typekit id.

--- a/sandboxTemplates/libSandbox.html
+++ b/sandboxTemplates/libSandbox.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Reactor Extension Library Sandbox</title>
 
+    <script>
+      window.Coral = window.Coral || {};
+      Coral.options = { typeKitId: 'buj6cmr'};
+    </script>
+
     <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/css/coral.css">
     <script src="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/js/libs/jquery.js"></script>
     <script src="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/js/coral.js"></script>
