Added call to _satellite.pageBottom() to lib sandbox.

--- a/sandboxTemplates/libSandbox.html
+++ b/sandboxTemplates/libSandbox.html
@@ -23,5 +23,7 @@
     <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
 
     Modify sandboxTemplate/container.js and sandboxTemplate/libSandbox.html then test the result here.
+
+    <script>_satellite.pageBottom();</script>
   </body>
 </html>
