Refactored to no longer copy sandbox client files before serving.

--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -13,9 +13,9 @@
     <script src="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/js/libs/jquery.js"></script>
     <script src="//assets.adobedtm.com/activation/reactor/coralui/3.11.0/js/coral.js"></script>
 
-    <link href="includes/css/sandbox.css" rel="stylesheet" type="text/css">
-    <script src="includes/js/container.js"></script>
-    <script src="includes/js/engine.js"></script>
+    <link href="sandbox.css" rel="stylesheet" type="text/css">
+    <script src="container.js"></script>
+    <script src="engine.js"></script>
   </head>
   <body class="coral--light">
     <a class="nav" is="coral-anchorbutton" variant="quiet" href="viewSandbox.html">Go to view sandbox</a>
