--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -22,8 +22,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/addon/lint/lint.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/addon/lint/json-lint.js"></script>
 
-    <script src="includes/js/viewSandbox.js"></script>
-    <link href="includes/css/sandbox.css" rel="stylesheet" type="text/css">
+    <script src="extensionDescriptor.js"></script>
+    <script src="viewSandbox.js"></script>
+    <link href="sandbox.css" rel="stylesheet" type="text/css">
  </head>
   <body class="coral--light">
     <div class="container">
