--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -22,7 +22,7 @@
 
     <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
 
-    Modify sandboxTemplate/container.js and sandboxTemplate/libSandbox.html then test the result here.
+    Modify .sandbox/container.js and .sandobx/libSandbox.html then test the result here. Check out <a href="https://git.corp.adobe.com/reactor/extension-support-sandbox/blob/master/README.md">README.md</a> on how to generate  the `.sandbox` files.
 
     <script>_satellite.pageBottom();</script>
   </body>
