Making necessary changes for extension bridge refactor.

--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -39,7 +39,7 @@
           <select id="extensionViewSelector"></select>
         </div>
 
-        <div id="iframeContainer"></div>
+        <div id="extensionViewContainer"></div>
       </div>
       <div class="inputs">
         <div class="actionPanel" id="initPanel">
@@ -57,5 +57,6 @@
         </div>
       </div>
     </div>
+    <div id="editModeBackdrop"></div>
   </body>
 </html>
