--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -26,7 +26,7 @@
     <script src="viewSandbox.js"></script>
     <link href="sandbox.css" rel="stylesheet" type="text/css">
  </head>
-  <body class="coral--light">
+  <body class="viewSandbox coral--light">
     <div class="container">
       <div class="views">
         <a class="nav" is="coral-anchorbutton" variant="quiet" href="libSandbox.html">Go to library sandbox</a>
