--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -39,36 +39,38 @@
         <select id="extensionViewSelector"></select>
       </div>
 
-      <div id="panes">
-        <div id="extensionViewPane"></div>
-        <div id="controlPane">
-          <coral-tabview>
-            <coral-tablist>
-              <coral-tab>Init</coral-tab>
-              <coral-tab>Get Settings</coral-tab>
-              <coral-tab>Validate</coral-tab>
-            </coral-tablist>
-            <coral-panelstack>
-              <coral-panel>
-                <div id="initEditorContainer" class="editorContainer"></div>
-                <div class="panelButtonHolder">
-                  <button is="coral-button" id="initButton" class="panelButton">Init</button>
-                </div>
-              </coral-panel>
-              <coral-panel>
-                <div class="panelButtonHolder">
-                  <button is="coral-button" id="getSettingsButton" class="panelButton">Get Settings</button>
-                </div>
-                <div id="getSettingsEditorContainer" class="editorContainer"></div>
-              </coral-panel>
-              <coral-panel>
-                <div class="panelButtonHolder">
-                  <button is="coral-button" id="validateButton" class="panelButton">Validate</button>
-                </div>
-                <div id="validateOutput"></div>
-              </coral-panel>
-            </coral-panelstack>
-          </coral-tabview>
+      <div id="panesWrapper">
+        <div id="panes">
+          <div id="extensionViewPane"></div>
+          <div id="controlPane">
+            <coral-tabview>
+              <coral-tablist>
+                <coral-tab>Init</coral-tab>
+                <coral-tab>Get Settings</coral-tab>
+                <coral-tab>Validate</coral-tab>
+              </coral-tablist>
+              <coral-panelstack>
+                <coral-panel>
+                  <div id="initEditorContainer" class="editorContainer"></div>
+                  <div class="panelButtonHolder">
+                    <button is="coral-button" id="initButton" class="panelButton">Init</button>
+                  </div>
+                </coral-panel>
+                <coral-panel>
+                  <div class="panelButtonHolder">
+                    <button is="coral-button" id="getSettingsButton" class="panelButton">Get Settings</button>
+                  </div>
+                  <div id="getSettingsEditorContainer" class="editorContainer"></div>
+                </coral-panel>
+                <coral-panel>
+                  <div class="panelButtonHolder">
+                    <button is="coral-button" id="validateButton" class="panelButton">Validate</button>
+                  </div>
+                  <div id="validateOutput"></div>
+                </coral-panel>
+              </coral-panelstack>
+            </coral-tabview>
+          </div>
         </div>
       </div>
     </div>
