Local storage cache support for init info.

--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -54,6 +54,7 @@
                   <div id="initEditorContainer" class="editorContainer"></div>
                   <div class="panelButtonHolder">
                     <button is="coral-button" id="initButton" class="panelButton">Init</button>
+                    <button is="coral-button" id="resetInitButton" class="panelButton resetInitButton">Reset</button>
                   </div>
                 </coral-panel>
                 <coral-panel>
