Added button for copying settings output to init.

--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -62,6 +62,9 @@
                     <button is="coral-button" id="getSettingsButton" class="panelButton">Get Settings</button>
                   </div>
                   <div id="getSettingsEditorContainer" class="editorContainer"></div>
+                  <div class="panelButtonHolder">
+                    <button is="coral-button" id="copySettingsToInitButton" class="panelButton">Copy Settings to Init Panel</button>
+                  </div>
                 </coral-panel>
                 <coral-panel>
                   <div class="panelButtonHolder">
