--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <title>Reactor Extension Library Sandbox</title>
 
-    <script>
-      window.Coral = window.Coral || {};
-      Coral.options = { typeKitId: 'buj6cmr'};
-    </script>
+<head lang="en">
+  <meta charset="UTF-8">
+  <title>Reactor Extension Library Sandbox</title>
 
-    <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/css/coral.css">
-    <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/libs/jquery.js"></script>
-    <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/coral.js"></script>
+  <script>
+    window.Coral = window.Coral || {};
+    Coral.options = { typeKitId: 'buj6cmr' };
+  </script>
 
-    <link href="sandbox.css" rel="stylesheet" type="text/css">
-    <script src="container.js"></script>
-    <script src="engine.js"></script>
-  </head>
-  <body class="coral--light">
-    <a class="nav" is="coral-anchorbutton" variant="quiet" href="viewSandbox.html">Go to view sandbox</a>
+  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/css/coral.css">
+  <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/libs/jquery.js"></script>
+  <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/coral.js"></script>
 
-    <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
+  <link href="sandbox.css" rel="stylesheet" type="text/css">
+  <script src="container.js"></script>
+  <script src="engine.js"></script>
+</head>
 
-    Modify .sandbox/container.js and .sandbox/libSandbox.html then test the result here. Check out <a href="https://www.npmjs.com/package/@adobe/reactor-sandbox#configuring-the-sandbox" target="_blank">documentation</a> on how to generate  the `.sandbox` files.
+<body class="coral--light">
+  <div class="nav">
+    <a is="coral-anchorbutton" variant="quiet" href="editor.html">Go to rule editor</a>
+    <a is="coral-anchorbutton" variant="quiet" href="viewSandbox.html">Go to view sandbox</a>
+  </div>
 
-    <script>_satellite.pageBottom();</script>
-  </body>
+  <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
+
+  Modify .sandbox/container.js and .sandbox/libSandbox.html then test the result here. Check out
+  <a href="https://www.npmjs.com/package/@adobe/reactor-sandbox#configuring-the-sandbox" target="_blank">documentation</a> on how to generate the `.sandbox` files.
+
+  <script>_satellite.pageBottom();</script>
+</body>
+
 </html>
