Fix document.registerElement Chrome warning.

--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -10,9 +10,7 @@
     Coral.options = { typeKitId: 'buj6cmr' };
   </script>
 
-  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/css/coral.css">
-  <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/libs/jquery.js"></script>
-  <script src="//assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/coral.js"></script>
+  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.17.0/css/coral.css">
 
   <link href="sandbox.css" rel="stylesheet" type="text/css">
   <script src="container.js"></script>
@@ -21,8 +19,8 @@
 
 <body class="coral--light">
   <div class="nav">
-    <a is="coral-anchorbutton" variant="quiet" href="editor.html">Go to rule editor</a>
-    <a is="coral-anchorbutton" variant="quiet" href="viewSandbox.html">Go to view sandbox</a>
+    <a class="coral-Button coral-Button--quiet" href="editor.html">Go to rule editor</a>
+    <a class="coral-Button coral-Button--quiet" href="viewSandbox.html">Go to view sandbox</a>
   </div>
 
   <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
