--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -9,9 +9,7 @@
       Coral.options = { typeKitId: 'buj6cmr'};
     </script>
 
-    <link rel="stylesheet" href="https://assets.adobedtm.com/activation/reactor/coralui/3.16.0/css/coral.css">
-    <script src="https://assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/libs/jquery.js"></script>
-    <script src="https://assets.adobedtm.com/activation/reactor/coralui/3.16.0/js/coral.js"></script>
+    <link rel="stylesheet" href="https://assets.adobedtm.com/activation/reactor/coralui/3.17.0/css/coral.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/codemirror.css" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/addon/lint/lint.css" rel="stylesheet" type="text/css">
@@ -29,7 +27,7 @@
  </head>
   <body id="viewSandbox" class="coral--light">
     <div id="content">
-      <a class="nav" is="coral-anchorbutton" variant="quiet" href="libSandbox.html">Go to library sandbox</a>
+      <a class="nav coral-Button coral-Button--quiet" href="libSandbox.html">Go to library sandbox</a>
 
       <h1 class="coral-Heading coral-Heading--1">Reactor Extension View Sandbox</h1>
 
@@ -43,37 +41,43 @@
         <div id="panes">
           <div id="extensionViewPane"></div>
           <div id="controlPane">
-            <coral-tabview>
-              <coral-tablist>
-                <coral-tab>Init</coral-tab>
-                <coral-tab>Get Settings</coral-tab>
-                <coral-tab>Validate</coral-tab>
-              </coral-tablist>
-              <coral-panelstack>
-                <coral-panel>
-                  <div id="initEditorContainer" class="editorContainer"></div>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="initButton" class="panelButton">Init</button>
-                    <button is="coral-button" id="resetInitButton" class="panelButton resetInitButton">Reset</button>
+            <div class="coral-TabView">
+              <div class="coral-TabList">
+                <span class="coral-Tab is-selected" data-panel-id="initPanel">Init</span>
+                <span class="coral-Tab" data-panel-id="getSettingsPanel">Get Settings</span>
+                <span class="coral-Tab" data-panel-id="validatePanel">Validate</span>
+              </div>
+              <div class="coral-PanelStack">
+                <div class="coral-Panel is-selected" id="initPanel">
+                  <div class="coral-PanelContent">
+                    <div id="initEditorContainer" class="editorContainer"></div>
+                    <div class="panelButtonHolder">
+                      <button id="initButton" class="coral-Button panelButton">Init</button>
+                      <button id="resetInitButton" class="coral-Button panelButton resetInitButton">Reset</button>
+                    </div>
                   </div>
-                </coral-panel>
-                <coral-panel>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="getSettingsButton" class="panelButton">Get Settings</button>
+                </div>
+                <div class="coral-Panel" id="getSettingsPanel">
+                  <div class="coral-PanelContent">
+                    <div class="panelButtonHolder">
+                      <button id="getSettingsButton" class="coral-Button panelButton">Get Settings</button>
+                    </div>
+                    <div id="getSettingsEditorContainer" class="editorContainer"></div>
+                    <div class="panelButtonHolder">
+                      <button id="copySettingsToInitButton" class="coral-Button panelButton">Copy Settings to Init Panel</button>
+                    </div>
                   </div>
-                  <div id="getSettingsEditorContainer" class="editorContainer"></div>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="copySettingsToInitButton" class="panelButton">Copy Settings to Init Panel</button>
+                </div>
+                <div class="coral-Panel" id="validatePanel">
+                  <div class="coral-PanelContent">
+                    <div class="panelButtonHolder">
+                      <button id="validateButton" class="coral-Button panelButton">Validate</button>
+                    </div>
+                    <div id="validateOutput"></div>
                   </div>
-                </coral-panel>
-                <coral-panel>
-                  <div class="panelButtonHolder">
-                    <button is="coral-button" id="validateButton" class="panelButton">Validate</button>
-                  </div>
-                  <div id="validateOutput"></div>
-                </coral-panel>
-              </coral-panelstack>
-            </coral-tabview>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
