Switch to spectrum-css.

--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -5,22 +5,17 @@
   <meta charset="UTF-8">
   <title>Reactor Extension Library Sandbox</title>
 
-  <script>
-    window.Coral = window.Coral || {};
-    Coral.options = { typeKitId: 'buj6cmr' };
-  </script>
-
-  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/coralui/3.17.0/css/coral.css">
+  <link rel="stylesheet" href="spectrum-css/2.6.0/standalone/spectrum-light.css">
 
   <link href="sandbox.css" rel="stylesheet" type="text/css">
   <script src="container.js"></script>
   <script src="engine.js"></script>
 </head>
 
-<body class="coral--light">
+<body class="spectrum spectrum--light">
   <div class="nav">
-    <a class="coral-Button coral-Button--quiet" href="editor.html">Go to rule editor</a>
-    <a class="coral-Button coral-Button--quiet" href="viewSandbox.html">Go to view sandbox</a>
+    <a class="spectrum-Button spectrum-Button--secondary spectrum-Button--quiet" href="editor.html">Go to rule editor</a>
+    <a class="spectrum-Button spectrum-Button--secondary spectrum-Button--quiet" href="viewSandbox.html">Go to view sandbox</a>
   </div>
 
   <h1 class="coral-Heading coral-Heading--1">Reactor Extension Library Sandbox</h1>
