Load spectrum from CDN.

--- a/src/client/libSandbox.html
+++ b/src/client/libSandbox.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Reactor Extension Library Sandbox</title>
 
-  <link rel="stylesheet" href="spectrum-css/2.6.0/standalone/spectrum-light.css">
+  <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/spectrum/2.9.0/spectrum-light.css">
 
   <link href="sandbox.css" rel="stylesheet" type="text/css">
   <script src="container.js"></script>
