--- a/src/client/viewSandbox.html
+++ b/src/client/viewSandbox.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Reactor Extension View Sandbox</title>
 
-    <link rel="stylesheet" href="spectrum-css/2.6.0/standalone/spectrum-light.css">
+    <link rel="stylesheet" href="//assets.adobedtm.com/activation/reactor/spectrum/2.9.0/spectrum-light.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/codemirror.css" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.2/addon/lint/lint.css" rel="stylesheet" type="text/css">
